[package]
name = "tiberius-mssql-broker"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tiberius = { version = "0.12.2", default-features = false, features = ["sql-browser-tokio", "time", "chrono", "rustls-native-certs", "rustls", "bigdecimal", "tds73"] }

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.26"
log = "0.4.19"

num-traits = "0.2.15"
futures-core = "0.3.28"
kanal = "0.1.0-pre8"
serde-xml-rs = "0.6.0"
quickxml_to_serde = "0.5.0"

deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.96"
tiberius = { workspace = true }
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7.8"
uuid = "1.3.4"
anydate = { version = "0.3.0", features = ["serde"] }
