[package]
name = "tiberius-mssql-broker"
version = "0.1.2"
edition = "2021"
authors = ["Mohammad Julfikar <julfikar@eztech.com.my>", "Mohammad Julfikar <md.julfikar.mahmud@gmail.com>"]
categories = ["database-interfaces"]
description = "Real time change listener for MSSQL"
exclude = [
    ".idea",
    ".github"
]
keywords = ["sqlserver","database","broker","mssql","tiberius","listener"]
license = "Apache-2.0"
repository = "https://github.com/mjm918/tiberius-mssql-broker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anydate = { version = "0.3.0", features = ["serde"] }
async-trait = "0.1.68"
chrono = "0.4.26"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
futures-core = "0.3.28"
kanal = "0.1.0-pre8"
log = "0.4.19"
num-traits = "0.2.15"
quickxml_to_serde = "0.5.0"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.96"
tiberius = { version = "0.12.2", default-features = false, features = ["sql-browser-tokio", "time", "chrono", "rustls-native-certs", "rustls", "bigdecimal", "tds73"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7.8"
uuid = "1.3.4"
